# serverless-cache-rust

./: .gitignore  Cargo.toml  README.md  build.sh  package.json  wrangler.toml
.github/workflows/: deploy.yml
src/: lib.rs
